Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,5 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - bash: |
-        mkdir -p ~/.docker
-        echo '{ "experimental": "enabled" }' > ~/.docker/config.json
-        docker buildx
+        echo '{ "experimental": "enabled" }' > /etc/docker/daemon.json
+        docker version -f '{{.Server.Experimental}}'
