Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,4 +20,4 @@ stages:
         echo '{ "experimental": true }' | sudo tee /etc/docker/daemon.json
         sudo service docker restart
         docker version -f '{{.Server.Experimental}}'
-        docker buildx --help
+        docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:${tag} .
