--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,7 @@ stages:
     - bash: |
         echo '{ "experimental": true }' | sudo tee /etc/docker/daemon.json
         sudo service docker restart
-        docker version -f '{{.Server.Experimental}}'
+        docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+        docker buildx create --use - docker buildx create --use
+        docker buildx inspect --bootstrap - docker buildx inspect --bootstrap
         docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:latest .
