--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ stages:
     steps:
     - bash: |
         echo '{ "experimental": true }' | sudo tee /etc/docker/daemon.json
+        echo '{ "experimental": true }' | sudo tee ~/.docker/config.json
         sudo service docker restart
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker buildx create --use - docker buildx create --use
