--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ stages:
 
     - task: DockerInstaller@0
       inputs:
-        dockerVersion: '19.03.7-ce'
+        dockerVersion: '19.03.7'
         releaseType: 'edge'
     - bash: |
         docker version
