--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,6 @@ stages:
         dockerVersion: '19.03.7'
         releaseType: 'edge'
     - bash: |
+        export DOCKER_CLI_EXPERIMENTAL=enabled
         docker version
         docker buildx --help
