--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,5 +22,5 @@ stages:
         dockerVersion: '19.03.7'
         releaseType: 'edge'
     - bash: |
-        export DOCKER_CLI_EXPERIMENTAL=enabled
-        docker buildx build .
+        export DOCKER_CLI_EXPERIMENTAL=1
+        docker buildx install
