--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,8 @@ stages:
     - bash: |
         export DOCKER_BUILD_KIT=1
         export DOCKER_CLI_EXPERIMENTAL=enabled
+        mkdir -p ~/.docker/cli-plugins
+        curl https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 -O ~/.docker/cli-plugins/docker-buildx
+        chmod a+x ~/.docker/cli-plugins/docker-buildx
         docker version
         docker buildx install
