Update azure pipelines and dockerfile

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,9 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
+  DOCKER_BUILD_KIT: 1
+  DOCKER_CLI_EXPERIMENTAL: 'enabled'
+
 
 stages:
 - stage: Build
@@ -22,11 +25,9 @@ stages:
         dockerVersion: '19.03.7'
         releaseType: 'edge'
     - bash: |
-        export DOCKER_BUILD_KIT=1
-        export DOCKER_CLI_EXPERIMENTAL=enabled
         mkdir -p ~/.docker/cli-plugins
-        curl -L https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 --output ~/.docker/cli-plugins/docker-buildx && chmod a+x ~/.docker/cli-plugins/docker-buildx
-        docker version
+        curl -L https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 --output ~/.docker/cli-plugins/docker-buildx
+        chmod a+x ~/.docker/cli-plugins/docker-buildx
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker buildx create --use
         docker buildx inspect --bootstrap
