--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ stages:
   displayName: Build image
   jobs:  
   - job: Build
+    timeoutInMinutes: 120
     displayName: Build
     pool:
       vmImage: 'ubuntu-latest'
