--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,7 @@ stages:
       inputs:
         dockerVersion: '19.03.7'
         releaseType: 'edge'
+  
     - bash: |
         mkdir -p ~/.docker/cli-plugins
         curl -L https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 --output ~/.docker/cli-plugins/docker-buildx
@@ -32,4 +33,4 @@ stages:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker buildx create --use
         docker buildx inspect --bootstrap
-        docker buildx build --platform=linux/arm/v7 -t ymedlop/konga:0.14.7 -o type=registry .
+        docker buildx build --platform=linux/arm64,linux/amd64 -t ymedlop/konga:0.14.7 -o type=registry .
