--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,6 @@ variables:
   DOCKER_BUILD_KIT: 1
   DOCKER_CLI_EXPERIMENTAL: 'enabled'
 
-
 stages:
 - stage: Build
   displayName: Build image
@@ -20,12 +19,11 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
-
     - task: DockerInstaller@0
       inputs:
         dockerVersion: '19.03.7'
         releaseType: 'edge'
-  
+
     - bash: |
         mkdir -p ~/.docker/cli-plugins
         curl -L https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 --output ~/.docker/cli-plugins/docker-buildx
@@ -33,6 +31,7 @@ stages:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker buildx create --use
         docker buildx inspect --bootstrap
-
+        docker buildx install
+  
     - bash: |
-        docker buildx build --platform=linux/arm64,linux/amd64 -t ymedlop/konga:0.14.7 -o type=registry .
+        docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:builder --target=builder -o type=registry .
