--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,6 @@ stages:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker buildx create --use
         docker buildx inspect --bootstrap
-        docker buildx install
   
     - bash: |
-        docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:builder --target=builder -o type=registry .
+        docker buildx build --platform=linux/arm64 -t ymedlop/konga:builder --target=builder -o type=registry .
