--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,4 @@ stages:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker buildx create --use
         docker buildx inspect --bootstrap
-  
-    - bash: |
-        docker buildx build --platform=linux/arm64 -t ymedlop/konga:builder --target=builder -o type=registry .
+        docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:0.14.7 -o type=registry .
