--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,10 @@ stages:
       inputs:
         dockerVersion: '19.03.7'
         releaseType: 'edge'
-
+    - task: Docker@2
+      inputs:
+        command: 'login'
+  
     - bash: |
         mkdir -p ~/.docker/cli-plugins
         curl -L https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 --output ~/.docker/cli-plugins/docker-buildx
