Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,7 @@ stages:
     - task: Docker@2
       inputs:
         command: 'login'
+        containerRegistry: 'dockerhub'
   
     - bash: |
         mkdir -p ~/.docker/cli-plugins
