--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,4 +35,6 @@ stages:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker buildx create --use
         docker buildx inspect --bootstrap
+
+    - bash: |
         docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:0.14.7 -o type=registry .
