--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,6 @@ stages:
   displayName: Build image
   jobs:  
   - job: Build
-    timeoutInMinutes: 120
     displayName: Build
     pool:
       vmImage: 'ubuntu-latest'
@@ -23,21 +22,15 @@ stages:
       inputs:
         dockerVersion: '19.03.7'
         releaseType: 'edge'
-    - task: Docker@2
-      inputs:
-        command: 'login'
-        containerRegistry: 'dockerhub'
-  
+
     - bash: |
         mkdir -p ~/.docker/cli-plugins
         curl -L https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 --output ~/.docker/cli-plugins/docker-buildx
         chmod a+x ~/.docker/cli-plugins/docker-buildx
-        docker version
-
-    - bash: |
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker buildx create --use
         docker buildx inspect --bootstrap
-
+        docker buildx install
+  
     - bash: |
         docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:0.14.7 -o type=registry .
