--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,5 +29,9 @@ stages:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker buildx create --use
         docker buildx inspect --bootstrap
-        docker login -u $(docker_user) -p $(docker_pwd)
+    - task: Docker@2
+      inputs:
+        command: 'login'
+        containerRegistry: 'dockerhub'
+    - bash: |
         docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:0.14.7 -o type=registry .
