--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,6 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
-  MY_DOCKER_USER: '$(docker_user)'
-  MY_DOCKER_PWD: '$(docker_pwd)'
 
 stages:
 - stage: Build
@@ -22,12 +20,18 @@ stages:
       inputs:
         dockerVersion: '19.03.7'
         releaseType: 'edge'
-    - bash: |
-        mkdir -p ~/.docker/cli-plugins
-        curl -L https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 --output ~/.docker/cli-plugins/docker-buildx
-        chmod a+x ~/.docker/cli-plugins/docker-buildx
-        docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-        docker buildx create --use
-        docker buildx inspect --bootstrap
-        docker login -u $MY_DOCKER_USER -p $MY_DOCKER_PWD
-        docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:0.14.7 -o type=registry .
+    - task: Bash@3
+      env:
+        MY_DOCKER_USER: '$(docker_user)'
+        MY_DOCKER_PWD: '$(docker_pwd)'
+      inputs:
+        targetType: 'inline'
+        script: |
+          mkdir -p ~/.docker/cli-plugins
+          curl -L https://github.com/docker/buildx/releases/download/v0.3.1/buildx-v0.3.1.linux-amd64 --output ~/.docker/cli-plugins/docker-buildx
+          chmod a+x ~/.docker/cli-plugins/docker-buildx
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+          docker buildx create --use
+          docker buildx inspect --bootstrap
+          docker login -u $MY_DOCKER_USER -p $MY_DOCKER_PWD
+          docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:0.14.7 -o type=registry .
