--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,5 +33,5 @@ stages:
           docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
           docker buildx create --use
           docker buildx inspect --bootstrap
-          docker login -u $MY_DOCKER_USER -p $MY_DOCKER_PWD
+          echo $MY_DOCKER_PWD | docker login -u $MY_DOCKER_USER --password-stdin
           docker buildx build --platform=linux/amd64,linux/arm64 -t ymedlop/konga:0.14.7 -o type=registry .
